# rosetta-smart-contracts

./: .gitignore  AnchorOverview.md  README.md  contract_features.md
Algorand_Execution_traces_tool/: anonymous_data_flow.py  auction_flow.py  bet_flow.py  crowdfund_flow.py  decentralized_identity_flow.py  escrow_flow.py  factory_flow.py  simple_transfer_flow.py  simple_wallet_flow.py  storage_flow.py  upgradable_proxy_flow.py  vault_flow.py  vesting_flow.py  wrapper.py
Algorand_Execution_traces_tool/contracts/: anonymous_data.py  auction.py  crowdfund.py  escrow.py  product.py  simple_transfer.py  simple_wallet.py  storage.py  vault.py  vesting.py
EVM_Execution_traces_tool/: HTLC_flow.py  simple_transfer_flow.py  simple_wallet_flow.py  token_transfer_flow.py
EVM_Execution_traces_tool/EVM_transactions/: compiler.py  deployer.py
EVM_Execution_traces_tool/solidity/: Escrow.sol  HTLC.sol  dataStorage.sol  example.sol
EVM_Execution_traces_tool/utils/: etherPrice.py
Solana_Execution_traces_tool/: .gitignore  Cargo.toml  Readme.md  add_use_case.sh  package-lock.json  package.json  tsconfig.json
Solana_Execution_traces_tool/Solana_Anchor/: Anchor.toml  LICENSE  README.md  package-lock.json  (+1 more)
Solana_Execution_traces_tool/Solana_Anchor/programs/oracle_bet_v2/: Cargo.toml
Solana_Execution_traces_tool/Solana_Raw_Rust/contracts/crowdfund/: Cargo.toml
Solana_Execution_traces_tool/Solana_Raw_Rust/contracts/crowdfund/src/: lib.rs
Solana_Execution_traces_tool/Solana_Raw_Rust/contracts/token_transfer/: Cargo.toml
Solana_Execution_traces_tool/Solana_Raw_Rust/contracts/token_transfer/src/: lib.rs
contracts/simple_transfer/solana/SimpleTransfer/src/htlc/: Cargo.toml
contracts/simple_transfer/solana/SimpleTransfer/src/htlc/src/: lib.rs
tool/: escrow_flow.py  simple_transfer_flow.py  simple_wallet_flow.py  token_transfer_flow.py
(+594 files in other folders)
